Creating header and nav bar

--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bruno Y. Coelho - Engenheiro Civil</title>
-  </head>
-  <body></body>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bruno Y. Coelho - Engenheiro Civil</title>
+</head>
+
+<body>
+  <header class="sticky__header">
+    <nav class="header__navbar-container">
+      <a href="#home" id="navbar__logo">Bruno Y. Coelho</a>
+      <div class="header__navbar-toggle" id="mobile-menu">
+        <span class="header__menu-bar"></span>
+        <span class="header__menu-bar"></span>
+        <span class="header__menu-bar"></span>
+      </div>
+      <ul class="header__menu">
+        <li class="header__menu-item">
+          <a href="#home" class="header__navbar-links" id="home-page">Inicio</a>
+        </li>
+        <li class="header__navbar-item">
+          <a href="#about" class="header__navbar-links" id="about-page">Sobre Mim</a>
+        </li>
+        <li class="header__navbar-item">
+          <a href="#services" class="header__navbar-links" id="services-page">Serviços</a>
+        </li>
+        <li class="header__navbar-btn">
+          <a href="#sign-up" class="header__button" id="signup">Cadastrar</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+</body>
+
 </html>
