Updating index.html

--- a/index.html
+++ b/index.html
@@ -5,34 +5,42 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/media-queries/sticky-header.css">
+  <link rel="icon" type="image/x-icon" href="./assets/img/projeto-brn.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Reenie+Beanie&display=swap"
+    rel="stylesheet">
   <title>Bruno Y. Coelho - Engenheiro Civil</title>
 </head>
 
 <body>
-  <header class="sticky__header">
-    <nav class="header__navbar-container">
-      <a href="#home" id="navbar__logo">Bruno Y. Coelho</a>
-      <div class="header__navbar-toggle" id="mobile-menu">
-        <span class="header__menu-bar"></span>
-        <span class="header__menu-bar"></span>
-        <span class="header__menu-bar"></span>
+  <header class="header header--sticky">
+    <nav class="navbar__container">
+      <a href="#home" id="header__navbar-logo">Bruno Y. Coelho</a>
+      <div class="header__navbar-toggle" id="header__mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
-      <ul class="header__menu">
-        <li class="header__menu-item">
-          <a href="#home" class="header__navbar-links" id="home-page">Inicio</a>
+      <ul class="header__navbar-menu">
+        <li class="header__navbar-item">
+          <a href="#home" class="header__navbar-link" id="home-page">Inicio</a>
         </li>
         <li class="header__navbar-item">
-          <a href="#about" class="header__navbar-links" id="about-page">Sobre Mim</a>
+          <a href="#about" class="header__navbar-link" id="about-page">Sobre Mim</a>
         </li>
         <li class="header__navbar-item">
-          <a href="#services" class="header__navbar-links" id="services-page">Serviços</a>
+          <a href="#services" class="header__navbar-link" id="services-page">Serviços</a>
         </li>
         <li class="header__navbar-btn">
-          <a href="#sign-up" class="header__button" id="signup">Cadastrar</a>
+          <a href="#sign-up" class="button" id="signup">Contato</a>
         </li>
       </ul>
     </nav>
   </header>
+  <script src="./js/mobile.js"></script>
 </body>
 
 </html>
