Updating index.html

--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
           <a href="#services" class="header__navbar-link" id="services-page">Serviços</a>
         </li>
         <li class="header__navbar-btn">
-          <a href="#sign-up" class="button" id="signup">Contato</a>
+          <a href="#sign-up" class="button" id="contact">Contato</a>
         </li>
       </ul>
     </nav>
   </header>
   <script src="./js/mobile.js"></script>
+  <script src="./js/addHighlight.js"></script>
 </body>
 
 </html>
